# cosmic-python

./: .gitignore  Makefile  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg
allocation/: __init__.py  batches.py  repository.py  services.py
allocation/adapters/: orm.py  repositories.py
allocation/domain/: models.py
allocation/orm/: __init__.py  batches.py
docs/: requisitos.md
tests/: conftest.py  test_allocations.py  test_batches.py  test_orm.py  test_repository.py
tests/integration/: test_orm.py  test_repository.py
