[metadata]
name = CosmicArchitecture
version = file: VERSION
author = Edson César
author_email = edsono@gmail.com
license = MIT
description = An example o Cosmic Arqchitecture in Python
url = https://github.com/edsono/cosmic-python.git
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8

[options]
packages = cosmic-python
tests_require = pytest
include_package_data = True
